added owner reader to api
